support special linkage rules for jdk.jfr.internal.event.EventWriterFactory.getEventWriter(long) in JVMCI